[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-driver-venus"
version = "0.1.0"
description = "Hamilton Venus command line driver"
authors = [
    { name = "Cheshire Labs", email = "michaeltsalmi@cheshirelabs.io" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU Affero General Public License v3 (AGPLv3)" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[project.urls]
"Repository" =  "https://github.com/Cheshire-Labs/venus-driver"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
    "py.typed"
]
